# ChangeLog for media-libs/libvorbis
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.58 2005/10/04 11:13:06 matsuu Exp $

  04 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> libvorbis-1.1.0.ebuild:
  Stable on sh

*libvorbis-1.1.1 (16 Sep 2005)

  16 Sep 2005; Brandon Low <lostlogic@gentoo.org> +libvorbis-1.1.1.ebuild:
  Bump up to the latest release from xiph.org, this includes the latest of
  aotuv's patches, so there is no need for patching (yay). Unstable in all
  arches, especially needs testing in ppc-macos, because I dunno if I did the
  symlink stuff right.

  24 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> libvorbis-1.1.0.ebuild:
  epatch does not need die.

  16 Jul 2005; Mark Loeser <halcy0n@gentoo.org> libvorbis-1.0.1-r2.ebuild,
  libvorbis-1.1.0.ebuild:
  Filter -ftracer for gcc-3.4 and -march or -mtune k6*. bug #49472

  12 Jul 2005; Stephen P. Becker <geoman@gentoo.org> libvorbis-1.1.0.ebuild:
  stable on mips

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  libvorbis-1.1.0.ebuild:
  Stable on ppc.

  15 May 2005; Diego Pettenò <flameeyes@gentoo.org>
  libvorbis-1.0.1-r2.ebuild:
  Moved using toolchain-functs eclass.

  05 May 2005; Sven Wegener <swegener@gentoo.org> libvorbis-1.1.0.ebuild:
  Added missing parentheses to SRC_URI.

  08 Apr 2005; Markus Rothe <corsair@gentoo.org> libvorbis-1.1.0.ebuild:
  Stable on ppc64

  21 Mar 2005; Lina Pezzella <j4rg0n@gentoo.org> libvorbis-1.1.0.ebuild:
  Stable ppc-macos

  22 Jan 2005; Brandon Low <lostlogic@gentoo.org> :
  Add optional aoTuV beta3 patch support with local USE flag aotuv

  11 Jan 2005; Mike Frysinger <vapier@gentoo.org> libvorbis-1.1.0.ebuild:
  Disable C++ checks #74493.

  11 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libvorbis-1.0.1-r2.ebuild, libvorbis-1.1.0.ebuild:
  Cleanup after macos guys.

  01 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> libvorbis-1.1.0.ebuild: