@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/Attic/libvorbis-1.1.0.ebuild,v 1.19 2005/10/04 11:13:06 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/Attic/libvorbis-1.1.0.ebuild,v 1.20 2005/10/16 18:56:10 flameeyes Exp $
 
 inherit libtool flag-o-matic eutils toolchain-funcs
 
@@ -76,11 +76,11 @@ src_compile() {
 src_install() {
 	make DESTDIR="${D}" install || die
 	if use ppc-macos; then
-		dosym /usr/$(get_libdir)/libvorbisfile.3.1.0.dylib /usr/$(get_libdir)/libvorbisfile.0.dylib
-		dosym /usr/$(get_libdir)/libvorbisenc.2.0.0.dylib /usr/$(get_libdir)/libvorbisenc.0.dylib
+		dosym libvorbisfile.3.1.0.dylib /usr/$(get_libdir)/libvorbisfile.0.dylib
+		dosym libvorbisenc.2.0.0.dylib /usr/$(get_libdir)/libvorbisenc.0.dylib
 	else
-		dosym /usr/$(get_libdir)/libvorbisfile.so.3.1.0 /usr/$(get_libdir)/libvorbisfile.so.0
-		dosym /usr/$(get_libdir)/libvorbisenc.so.2.0.0 /usr/$(get_libdir)/libvorbisenc.so.0
+		dosym libvorbisfile.so.3.1.0 /usr/$(get_libdir)/libvorbisfile.so.0
+		dosym libvorbisenc.so.2.0.0 /usr/$(get_libdir)/libvorbisenc.so.0
 	fi
 
 	rm -rf ${D}/usr/share/doc
