@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libvorbis
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.58 2005/10/04 11:13:06 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libvorbis/ChangeLog,v 1.59 2005/10/16 18:56:10 flameeyes Exp $
+
+  16 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> libvorbis-1.1.0.ebuild,
+  libvorbis-1.1.1.ebuild:
+  Do not create absolute symlinks. Closes bug #101212.
 
   04 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> libvorbis-1.1.0.ebuild:
   Stable on sh
